hphp/test/zend/good/zend/objects_012.php
<?php

class foo {
}

interface bar extends foo {
}

echo "Done\n";
?>